--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "author": "Trias <triasbrata@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build":"tsc -p tsconfig.json",
-    "start":"node dist/server.js"
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "@koa/router": "^10.0.0",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa__router": "^8.0.4",
+    "dotenv": "^8.2.0",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "playwright": "^1.9.2",
