--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
+    "nodemon": "^2.0.7",
     "playwright": "^1.9.2",
     "tracer": "^1.1.4"
   },
