--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "koa-bodyparser": "^4.3.0",
     "nodemon": "^2.0.7",
     "playwright": "^1.9.2",
+    "sharp": "^0.28.1",
     "tracer": "^1.1.4"
   },
   "devDependencies": {
     "@types/koa": "^2.13.1",
+    "@types/sharp": "^0.27.3",
     "typescript": "^4.2.3"
   }
 }
